# bilibilicore

./: .gitignore  README.md  pyproject.toml
bilibilicore/: __init__.py
bilibilicore/api/: __init__.py  api.yaml  passport.py  season.py  stream.py  user.py  video.py
bilibilicore/config/: __init__.py  config.py  config.toml.example
bilibilicore/entity/: __init__.py  api.py  config_item.py
bilibilicore/utils/: __init__.py  api_wire.py  file_util.py  lazy_load.py  media.py  session.py  singleton.py
