[project]
name = "bilibilicore"
version = "0.1.0"
description = ""
authors = [
    {name = "lijunjie2232",email = "2533584225@qq.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"requests",
"rich",
"pydantic",
"toml",
"pyyaml",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
